# istqb

./: .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.ray  README-backup.md  README.md  astro.config.mjs  cluster.yaml  docker-compose.yaml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  test_copilot.html
.astro/: content-modules.mjs  data-store.json
.github/: release.yml
.github/workflows/: astro.yml  build.yml  build_dev.yml  helm.yaml  smoke_test.yaml  tests.yaml
.hydra_config/: config.yaml
.hydra_config/chunker/: base.yaml  recursive_splitter.yaml  semantic_splitter.yaml  token_splitter.yaml
.hydra_config/rag/: ChatBotRag.yaml
.hydra_config/retriever/: base.yaml  hyde.yaml  multiQuery.yaml
ansible/: README.md  ansible.cfg  deploy.sh  inventory.ini.example
ansible/playbooks/: docker.yml  main-playbook.yml  nvidia-drivers-toolkit.yml  openrag.yml
automatic-evaluation-pipeline/: README.md  benchmark.py  generate_questions.py  upload_files.py
benchmarks/automatic-evaluation-pipeline/: README.md  benchmark.py  generate_questions.py
charts/openrag-stack/: Chart.yaml  values.yaml
docs/: api_documentation.md  chainlit_data_persistency.md  data_model.md  deploy_ray_cluster.md  kubernetes.md  setup_chainlit_ui_auth.md  setup_glusterfs.md  setup_indexerui.md  user_auth.md
docs/assets/: compose_linux_gpu.yaml  compose_ollama_cpu.yaml  env_example.env  (+2 more)
openrag/: api.py  app_front.py  chainlit_api.py  consts.py
quick_start/: docker-compose.yaml
tests/: test_vectordb.py
utility/: requirements.txt
(+628 files in other folders)
